<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.david.switcherApp.MainActivity"
    android:background="#00695C">

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="195dp" />

    <Button
        android:id="@+id/lvl1"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@mipmap/blank_level_button"
        android:contentDescription="@string/Button"
        android:fontFamily="@font/luminari"
        android:onClick="Selection"
        android:tag="1"
        android:text="@string/level_15"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <Button
        android:id="@+id/lvl2"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@mipmap/blank_level_button"
        android:contentDescription="@string/Button"
        android:fontFamily="@font/luminari"
        android:onClick="Selection"
        android:tag="2"
        android:text="@string/level_2"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.805"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <Button
        android:id="@+id/lvl3"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:background="@mipmap/blank_level_button"
        android:contentDescription="@string/Button"
        android:fontFamily="@font/luminari"
        android:onClick="Selection"
        android:tag="3"
        android:text="@string/level_3"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lvl1" />

    <Button
        android:id="@+id/lvl4"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:background="@mipmap/blank_level_button"
        android:contentDescription="@string/Button"
        android:fontFamily="@font/luminari"
        android:onClick="Selection"
        android:tag="4"
        android:text="@string/level_4"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.805"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lvl2" />

    <Button
        android:id="@+id/lvl5"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:background="@mipmap/blank_level_button"
        android:contentDescription="@string/Button"
        android:fontFamily="@font/luminari"
        android:onClick="Selection"
        android:tag="5"
        android:text="@string/level_5"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lvl3" />

    <Button
        android:id="@+id/lvl6"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:background="@mipmap/blank_level_button"
        android:contentDescription="@string/Button"
        android:fontFamily="@font/luminari"
        android:onClick="Selection"
        android:tag="6"
        android:text="@string/level_6"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.805"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lvl4" />

    <Button
        android:id="@+id/lvl7"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:background="@mipmap/blank_level_button"
        android:contentDescription="@string/Button"
        android:fontFamily="@font/luminari"
        android:onClick="Selection"
        android:tag="7"
        android:text="@string/level_7"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lvl5" />

    <Button
        android:id="@+id/lvl8"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:background="@mipmap/blank_level_button"
        android:contentDescription="@string/Button"
        android:fontFamily="@font/luminari"
        android:onClick="Selection"
        android:tag="8"
        android:text="@string/level_8"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.805"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lvl6" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="357dp"
        android:layout_height="59dp"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/luminari"
        android:text="@string/Level_Select_Message"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        android:textStyle="bold|italic"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>